--- a/ch3/naver.css
+++ b/ch3/naver.css
@@ -37,6 +37,9 @@
     background-repeat : no-repeat
     text-indent : 100%;
     overflow : hidden; */
+    vertical-align: middle;
+    position: relative;
+    top: -6px;
 }
 
 #header-center h1 span{
@@ -66,11 +69,35 @@
     display : inline-block;
     border : 2px solid #03cf5d; /*hex표기법*/
     vertical-align : middle;
+    position: relative;
 }
 
 #header-search fieldset input{
     border : none;
     padding : 0;
     outline : none;
-    
+    vertical-align: top;
+    width: 405px;
+    height: 23px;
+}
+
+#header-search fieldset button{
+    width: 49px;
+    height: 49px;
+    border: none;
+    padding: 0;
+    background: #03cf5d;
+    position: absolute;
+    right: -2px;
+    top: -2px;
+}
+
+#search-image {
+    background-image: url(./sp_search.png);
+    background-position: -3px -60px;
+    background-repeat: no-repeat;
+    width: 21px;
+    height: 21px;
+    display: inline-block;
+    margin: 14px
 }
